@@ -9,7 +9,8 @@ Modules/
 * Dropped all occurences of '#ifdef #LDAP_VENDOR_VERSION'.
 * Fixed wrong tuple size in l_ldap_result3() (see SF#1368108)
 * Fixed get_option(ldap.OPT_API_INFO) (see SF#1440165)
-
+* Fixed memory leak in l_ldap_result3() when all=0
+  (see SF#1457325)
 
 Lib/
 * Fixed ldap.schema.models.DITStructureRule.__str__() to
